# segment-buffer

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md  ROADMAP.md  TODO_LIST.md  deny.toml  flake.nix  release.toml  renovate.json
.github/: dependabot.yml  lychee.toml
.github/workflows/: ci.yml  fuzz.yml  nix.yml  publish.yml  supply-chain-report.yml  update-flake-lock.yml
benches/: bench_append.rs  bench_append_all.rs  bench_delete_acked.rs  bench_durability_policy.rs  bench_read_from.rs  bench_read_vs_for_each.rs  bench_recover.rs  bench_stats.rs  support.rs
docs/: CIPHERS.md  CROC_LESSONS.md  DOMAIN_LANGUAGE.md  MSRV.md  PERFORMANCE.md  RELEASE.md  book-insights-mapping.md
docs/perf/: 2026-07-19_v0.1.0-vs-v0.2.0.md  2026-07-19_v0.4.1_stress_throughput.md  2026-07-20_hot-path-flamegraph.md  2026-07-20_read-from-scan-cache.md  2026-07-21_scaling-and-payload-entropy-sweep.md  2026-07-23_percentile-latency-baseline.md
docs/planning/: 2026-07-19_04-49_v0.2.0-trust-closure-and-v0.3.0-scoping.md  2026-07-20_02-56_loom-delete-acked-append-trait-store.md  2026-07-20_03-40_v0.5.0-cloud-sync-throughput-batch.md  2026-07-20_05-50_envelope-v2-design-and-v0.6-deferrals.md  2026-07-21_05-20_docs-health-closure-and-structural-guards.md  2026-07-21_08-26_flush-worker-and-tier-0-levers.md  2026-07-23_15-50_book-insights-action-plan.md
docs/status/: 2026-07-19_03-14_multi-skill-session-self-review.md  2026-07-19_03-51_superb-tier-self-review.md  2026-07-19_04-22_v0.2.0-sweep-self-review.md  2026-07-19_10-59_v0.3.0-plan-executed-v0.4.0-shipped-self-review.md  2026-07-19_21-53_v0.4.1-shipped-but-not-released-stuck-job-self-review.md  2026-07-19_22-48_v0.4.2-released-critical-debt-closed.md  2026-07-20_01-05_v0.4.2-ci-never-green-fixed-dep-sweep.md  2026-07-20_01-37_process-debt-closure-verify-gate-annotations.md  2026-07-20_02-24_zstd-ccxt-pooling-perf-session-self-review.md  2026-07-20_03-30_segment-store-trait-loom-delete-acked-self-review.md  2026-07-20_04-11_investigation-sweep-discipline-broke.md  2026-07-20_06-49_v0.5.0-batch-shipped-two-ci-bugs-caught.md  2026-07-20_08-42_doc-quality-sweep-self-review.md  2026-07-20_09-19_doc-quality-sweep-and-v0.5.0-v0.5.1-release-session.md  2026-07-20_12-43_crates-io-and-github-release-backfill.md  2026-07-21_05-14_docs-health-audit-living-doc-drift-fixed-gate-incomplete.md  2026-07-21_06-27_plan-executed-full-gate-green-three-failures.md  2026-07-21_13-42_perf-batch-self-review-brutal.md  2026-07-21_15-20_readme-docs-health-brutal-self-review.md  2026-07-21_15-52_readme-followup-self-review.md  2026-07-21_16-13_docs-health-audit-two-surgical-fixes-self-review.md  2026-07-22_11-41_pr10-chacha20poly1305-bump-merged.md  2026-07-22_17-55_pr10-cleanup-and-v0.5.3-release.md  2026-07-23_17-08_book-insights-execution-self-review.md
examples/: background_flush.rs  backpressure.rs  basic_usage.rs  bring_your_own_cipher.rs  cloud_sync.rs  cloud_sync_disk_full.rs  crash_recovery.rs  encrypted.rs  hotpath_profile.rs  idempotent_server.rs  mpmc.rs  scaling.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_append_all.rs  fuzz_corrupted_read.rs  fuzz_envelope.rs  fuzz_parse_filename.rs  fuzz_recovery.rs
scripts/: check-html-root-url.sh  check-msrv.sh  verify-gate.sh
src/: cipher.rs  error.rs  lib.rs  property_tests.rs  segment.rs  store.rs  tests.rs
tests/: alloc_guard.rs  loom.rs
