[package]
name = "segment-buffer-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
segment-buffer = { path = "..", features = ["fuzz"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[[bin]]
name = "fuzz_corrupted_read"
path = "fuzz_targets/fuzz_corrupted_read.rs"

[[bin]]
name = "fuzz_recovery"
path = "fuzz_targets/fuzz_recovery.rs"

[[bin]]
name = "fuzz_parse_filename"
path = "fuzz_targets/fuzz_parse_filename.rs"

[[bin]]
name = "fuzz_envelope"
path = "fuzz_targets/fuzz_envelope.rs"

[[bin]]
name = "fuzz_append_all"
path = "fuzz_targets/fuzz_append_all.rs"

# Keep the fuzz crate out of the parent workspace so it builds independently
# (it requires nightly + -Zsanitizer).
[workspace]
